# TinyRenderer

./: .gitignore  CMakeLists.txt  README.md  geometry.h  global.h  main.cpp  model.cpp  model.h  ourGL.cpp  ourGL.h  tgaimage.cpp  tgaimage.h
